# pana

./: .gitignore  pyproject.toml
content/entity/: chroma.sqlite3
content/long_term/: mydatabase.db
content/short_term/: chroma.sqlite3
knowledge/: cro.txt  knowledge.txt
src/pana/: ChatBot.py  __init__.py  chatup.py  streamlitChat.py
src/pana/crews/blog_crew/: BlogCrew.py
src/pana/crews/blog_crew/config/: agents.yaml  tasks.yaml
