[project]
name = "pana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Safdar Ali Shah", email = "programmersafdar@live.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pana = "pana:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
