[project]
name = "pana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Safdar Ali Shah", email = "programmersafdar@live.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.102.0",
    "google-generativeai>=0.8.4",
    "streamlit>=1.42.2",
]

[project.scripts]
pana = "pana:main"
chatbot ="pana.ChatBot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
